--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,28 @@ Secret Key:<input type="password" id="secretKey"><br>
 </body>
 <script type="text/javascript">
     $(function(){
-        $('#accessKey').val(localStorage.access_key);
-        $('#secretKey').val(localStorage.secret_key);
+        showKeyPair();
 
         $('#setKeyPairs').click(function(){
-            setKeyPairs();
+            setKeyPair();
+            showKeyPair();
         })
     });
 
-    var setKeyPairs = function() {
+    var setKeyPair = function() {
         localStorage.access_key = $('#accessKey').val();
         localStorage.secret_key = $('#secretKey').val();
         notification('设置成功');
+    };
+
+    var clearKeyPair = function () {
+        localStorage.access_key = '';
+        localStorage.secret_key = '';
+    };
+
+    var showKeyPair = function () {
+        $('#accessKey').val(localStorage.access_key);
+        $('#secretKey').val(localStorage.secret_key);
     };
 
     var notification = function(content) {
