--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <p id="notification"></p>
-Bucket:<input type="text" id="bucket">
+Bucket:<input type="text" id="bucket"><br>
 Access Key:<input type="password" id="accessKey"><br>
 Secret Key:<input type="password" id="secretKey"><br>
 <button type="button" id="setQiniuSettings">确认</button>
